fix light and dark mode theme switching

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
 
 /* -------------- Themes -------------- */
 
-:root {
+[data-theme="light"] {
   --primary-color: #163853;
   --primary-color-faded: #5a86b22a;
   --secondary-color: #7091b1;
